src/test/ui/feature-gates/issue-43106-gating-of-test.stderr
error: cannot determine resolution for the attribute macro `test`
  --> $DIR/issue-43106-gating-of-test.rs:4:4
   |
LL | #![test                    = "4200"]
   |    ^^^^
   |
   = note: import resolution is stuck, try simplifying macro imports

error: aborting due to previous error

